--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <h2>Experience</h2>
     <h3>
       University of Alaska Fairbanks, Geographic Information Network of Alaska
-      <div class='pull-right date-range'>
-        October 2011 - Present
-      </div>
     </h3>
+    <div class='date-range'>
+      October 2011 - Present
+    </div>
     <h4></h4>
     <ul>
       <li>Implement automated processing and distribution of near-real-time satellite data</li>
@@ -47,10 +47,10 @@
     </ul>
     <h3>
       University of Alaska Fairbanks
-      <div class='pull-right date-range'>
-        September 2008 - October 2011
-      </div>
     </h3>
+    <div class='date-range'>
+      September 2008 - October 2011
+    </div>
     <h4></h4>
     <ul>
       <li>Administered Linux Servers</li>
@@ -59,10 +59,10 @@
     </ul>
     <h3>
       Kashiwazaki City, Niigata Prefecture, Japan
-      <div class='pull-right date-range'>
-        August 2005 - August 2008
-      </div>
     </h3>
+    <div class='date-range'>
+      August 2005 - August 2008
+    </div>
     <h4></h4>
     <ul>
       <li>Developed lesson plans that encourage communication</li>
@@ -72,18 +72,22 @@
     <h2>Education</h2>
     <h3>
       University of Alaska Fairbanks
-      <div class='pull-right date-range'>1998 - 2005</div>
     </h3>
-    <h4>
-      Graduated B.S., Computer Science
-    </h4>
+    <div class='date-range'>1998 - 2005</div>
+    <ul class='list-inline'>
+      <li>
+        Graduated B.S., Computer Science
+      </li>
+    </ul>
     <h3>
       Nagoya Gakuin University
-      <div class='pull-right date-range'>2003 - 2004</div>
     </h3>
-    <h4>
-      Graduated Exchange Program, Foreign Language Studies
-    </h4>
+    <div class='date-range'>2003 - 2004</div>
+    <ul class='list-inline'>
+      <li>
+        Graduated Exchange Program, Foreign Language Studies
+      </li>
+    </ul>
     <h2>Languages</h2>
     <ul class='list-inline'>
       <li>
