--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       <li>Rails</li>
       <li>Git</li>
       <li>Chef</li>
+      <li>Habitat</li>
       <li>Linux</li>
+      <li>Shell</li>
       <li>Terraform</li>
       <li>AWS</li>
     </ul>
@@ -42,7 +44,7 @@
     <ul>
       <li>Implement automated processing and distribution of near-real-time satellite data</li>
       <li>Develop and maintain Rails applications supporting scientific research and data discovery</li>
-      <li>Lead adoption of Chef in consolidated research IT organization</li>
+      <li>Lead adoption of Chef among research IT staff</li>
       <li>Advise faculty and staff in improving workflow and tools</li>
     </ul>
     <h3>
