--- a/resume-ScottMacfarlane.html
+++ b/resume-ScottMacfarlane.html
@@ -36,9 +36,9 @@
     </div>
     <h4></h4>
     <ul>
-      <li>Implement automated processing and distribution of near-real-time satellite data</li>
       <li>Develop and maintain Rails applications supporting scientific research and data discovery</li>
-      <li>Lead adoption of Chef among research IT staff</li>
+      <li>Lead adoption and implmentation of Chef among research IT staff</li>
+      <li>Implement automated processing and distribution of near-real-time satellite data</li>
       <li>Advise faculty and staff in improving workflow and tools</li>
     </ul>
     <h3>
