Update html and pdf

--- a/card.html
+++ b/card.html
@@ -44,7 +44,7 @@
           <small>(Native speaker)</small>
           <br>
           Japanese
-          <small>(Coversational)</small>
+          <small>(Conversational)</small>
           <br>
         </span>
       </div>
