--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h4></h4>
     <ul>
       <li>Develop and maintain Rails applications supporting scientific research and data discovery</li>
-      <li>Lead adoption and implmentation of Chef among research IT staff</li>
+      <li>Lead implementation of Chef</li>
       <li>Implement automated processing and distribution of near-real-time satellite data</li>
       <li>Advise faculty and staff in improving workflow and tools</li>
     </ul>
@@ -98,7 +98,7 @@
       </li>
       <li>
         Japanese
-        <div class='sub-text'>(Coversational)</div>
+        <div class='sub-text'>(Conversational)</div>
       </li>
     </ul>
     <h2>References</h2>
